--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </div>
 
     <div class="MenuPanel" data-value="" onblur="closeMenu(this)">
-      <a href="#">Home</a>
-      <a href="#">Prescriptions</a>
-      <a href="#">Products</a>
-      <a href="#">Contact Hub</a>
-      <a href="#">Rx History</a>
+      <ul>
+        <li>Home</li>
+        <li>Prescriptions</li>
+        <li>Products</li>
+        <li>Contact Hub</li>
+        <li>Rx History</li>
+      </ul>
     </div>
 
     <div class="right">
