adding Option Block and handling it's buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style_list_hospitals.css">
 </head>
 
-<body>
+<body data-is_dbl_clicked="false">
   <header>
     <div class="menu">
       <button id="menuButton" title="options" class="menuButton" value="menuMode"></button>
